2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* DataFile.cs:
	* ATA.cs:
	* NVMe.cs:
	* SCSI.cs:
	* DiscImageChef.Core.csproj:
	* SecureDigital.cs: Refactor: Move dumping code, and misc file
	  writing code, to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Statistics.cs:
	* ATA.cs:
	* NVMe.cs:
	* SCSI.cs:
	* DiscImageChef.Core.csproj:
	* SecureDigital.cs: Refactor: Moved media scanning to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Checksum.cs: Enabled option to set which checksums to use.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* MHDDLog.cs:
	* DiscImageChef.Core.csproj: Refactor: Move MHDDLog to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* IBGLog.cs:
	* DiscImageChef.Core.csproj: Refactor: Move IBGLog to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Checksum.cs:
	* DiscImageChef.Core.csproj: Refactor: Move Checksum to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Statistics.cs:
	* DiscImageChef.Core.csproj: Refactor: Move Statistics to
	  Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* ImageFormat.cs:
	* DiscImageChef.Core.csproj: Refactor: Move ImageFormat to
	  Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* PluginBase.cs:
	* DiscImageChef.Core.csproj: Refactor: Moved PluginBase to
	  Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Core.csproj:
	* AssemblyInfo.cs: Added project for separation of engine from
	  CLI.
